--- a/SpMVC_27_SecureV5/src/main/webapp/WEB-INF/views/include/include-head.jspf
+++ b/SpMVC_27_SecureV5/src/main/webapp/WEB-INF/views/include/include-head.jspf
@@ -13,3 +13,4 @@
 <script	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <!-- Latest compiled JavaScript -->
 <script	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
