--- a/SpMVC_29_MyShop/src/main/webapp/WEB-INF/views/include/include-nav.jspf
+++ b/SpMVC_29_MyShop/src/main/webapp/WEB-INF/views/include/include-nav.jspf
@@ -58,6 +58,11 @@ $(function(){
 	        <a class="nav-link" href="${rootPath}/user/mypage">MY PAGE</a>
 	      </li>   
       </sec:authorize>
+      <sec:authorize access="hasRole('ADMIN')">
+      	<li class="nav-item">
+	        <a class="nav-link" href="${rootPath}/admin">관리자 홈</a>
+	      </li>
+      </sec:authorize>
     </ul>
   </div>  
 </nav>
