--- a/SpMVC_29_MyShop/src/main/webapp/WEB-INF/views/include/include-nav.jspf
+++ b/SpMVC_29_MyShop/src/main/webapp/WEB-INF/views/include/include-nav.jspf
@@ -32,7 +32,7 @@ $(function(){
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">메뉴1</a>
+        <a class="nav-link" href="#">SPRING SHOP</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">메뉴2</a>
